--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "proyecto JV STUDIO",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon server",
+    "dev": "nodemon server",
     "start": "node server"
   },
   "author": "Luis Chinchilla",
@@ -13,12 +13,11 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "pug": "^3.0.2",
     "twilio": "^4.13.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1"
+    
   }
 }
